--- a/OpenFOAM/create_anim.ipynb
+++ b/OpenFOAM/create_anim.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create animation from OpenFOAM run"
+    "# Create animation from OpenFOAM run\n",
+    "\n",
+    "From : https://stackoverflow.com/questions/47775083/python-imageio-mp4-video-from-a-set-of-png-images"
    ]
   },
   {
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,13 +62,6 @@
    "metadata": {},
    "source": [
     "## I. Open lid"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "p' : p - rho*(g h)"
    ]
   },
   {
@@ -103,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
