openfoam mesh gen

--- a/OpenFOAM/design_mesh.ipynb
+++ b/OpenFOAM/design_mesh.ipynb
@@ -181,21 +181,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N_points = 432000\n"
+      "N_points = 2048000\n"
      ]
     }
    ],
    "source": [
     "blocks = np.array([\n",
-    "    (60,60,60),\n",
-    "    (60,60,60),\n",
+    "    (80,80,80),\n",
+    "    (80,240,80),\n",
     "])\n",
     "N_points = np.sum(np.prod(blocks, axis=1))\n",
     "print('N_points = {0}'.format(N_points))"
