--- a/presentation/slides/frame_5.tex
+++ b/presentation/slides/frame_5.tex
@@ -4,8 +4,13 @@
 \begin{frame}
 \frametitle{Project I. -- GADGET-2 -- Results}
 \begin{itemize}
-	\item Created two animations using both of the simulated cases
-	\item 
+	\item<1-> Created two animations using both of the simulated cases
+	\begin{enumerate}
+		\item<1-> Link to anim. /w dark matter: \url{https://youtu.be/fQ1-mvBPwlo}
+		\item<1-> Link to anim. /wo dark matter: \url{https://youtu.be/PglE_3H0rwc}
+	\end{enumerate}
+	\item<1-> Analysed the time evolution of the rotation curve of the case with dark matter included
+	\item<1-> The expectations were completely fulfilled in both cases 
 \end{itemize}
 
 \end{frame}
