--- a/presentation/slides/frame_6.tex
+++ b/presentation/slides/frame_6.tex
@@ -13,8 +13,9 @@
 	\item[]<2-> \textbf{Expectations}
 	\begin{enumerate}
 		\item<2-> When the droplet hits the surface of the water it first creates a small hollow in the surface
-		\item<2-> Very soon, the surface tension pulls the pushed away water back, which collides in the middle by force and creates a "column" of water in the middle, growing upwards
-		\item<2> After all of these, the water continues to wave around in the vessel
+		\item<2-> Very soon, the surface tension pulls the pushed away water back, which collides in the middle by force and creates a "column" of water in the middle, growing upwards.
+		\item<2-> The formation of a "corona" could occur along the side of the hollow
+		\item<2-> After all of these, the water continues to wave around in the vessel
 	\end{enumerate}
 \end{itemize}
 
